--- a/loc_hack/src/README_5.4.3.1
+++ b/loc_hack/src/README_5.4.3.1
@@ -1,52 +1,51 @@
-Slovenská lokalizace pro Kindle Paperwhite 2 s firmwarem 5.4.3.1
-============================================================
+Slovenská lokalizácia pre Kindle Paperwhite 2 s firmvérom 5.4.3.1
+=================================================================
 
-Určeno pro model označovaný jako Paperwhite 2, All-New Paperwhite či Paperwhite (2013)
-_Není_ určeno pro starší model označovaný jako Paperwhite či Paperwhite (2012)
+Určené pre model značený ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013)
+_Nie je_ určené pre starší model značený ako Paperwhite či Paperwhite (2012)
 
-Nejnovější verze vždy na https://github.com/dsmid/kindle-pw2-l10n-cs/releases
+Nejnovšiu verziu nájdete vždy na https://github.com/dsmid/kindle-pw2-l10n-cs/releases
 
-Více viz tento článek: http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/
-V případě problémů se obraťte na autora v diskusi pod článkem:
+Viac viď. tento článok: http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/
+V prípade problémov sa obráťte na autora v diskusii pod článkom:
 http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/#comments
 
-1) Ujistěte se, že máte nainstalovaný jailbreak, případně ho nainstalujte odsud:
+1) Uisite sa, že máte nainštalovaný jailbreak, prípadne ho nainštalujte odtiaľto:
    https://github.com/dsmid/kindle-pw2-l10n-cs/releases/tag/jailbreak
 
-2) Po rozbalení zipu vyberte soubor končící na _install.bin.
-   Ten nakopírujte přes USB do kořenu Kindlu (tj. tam, kde se nachází i složka documents).
+2) Po rozbalení zip archívu vyberte súbor končiaci na _install.bin.
+   Ten nakopírujte cez USB do koreňového adresára Kindlu (t.j. tam, kde sa nachádza i zložka documents).
+   
+3) Bezpečne odoberte Kindle z počítača ("Bezpečne odobrať" alebo "Vysunúť") a odpojte kábel
 
-3) Bezpečně odeberte Kindle z počítače ("Bezpečně odebrat" či "Vysunout") a odpojte
+4) Nasledne v čítačke zvolte Menu -> Nastavenia, Menu -> Aktualizovať Kindle a počkajte na dokončenie inštalácie.
 
-4) Pak už jen ve čtečce zvolte Menu->Settings, Menu->Update Your Kindle a čekejte,
-   než se instalace dokončí.
+5) Pokiaľ je položka menu "Aktualizovať Kindle" šedá, reštartujte Kindle (Menu -> Nastavenia,
+   Menu -> Reštart) a skúste znovu bod 4.
 
-5) Pokud je položka menu "Update Your Kindle" šedivá, restartujte Kindle (Menu -> Settings,
-   Menu -> Restart) a zkuste znovu bod 4.
+Aktualizácia firmvéru na Kindly s nainštalovanou slovenčinou môže mať nepredvídateľné dôsledky,
+preto som do lokalizácie zabudoval poistku, ktorá by mala aktívne brániť vnúteným
+aktualizáciam zo strany Amazonu.
+Ručná aktualizácia zostane funkčná, dôrazne však pred ňou varujem.
+Ak chcete i napriek tomu svoj Kindle aktualizovať, odinštalujte najskôr slovenčinu použitím
+odinštalačného balíku (končiaceho na _uninstall.bin) a následne aktualizujte firmvér.
+Jailbreak odinštalovávať nemusíte, naopak ho doporučujem pred aktualizáciou firmvéru zachovať,
+pretože nikdy neviete, či pôjde na nový firmvér opäť nainštalovať.
 
-Aktualizace firmwaru na Kindlu s nainstalovanou slovenštinou může mít nepředvídatelné důsledky,
-proto jsem do lokalizace zabudoval pojistku, jež by měla aktivně bránit tichým vnuceným
-aktualizacím ze strany Amazonu.
-Ruční aktualizace zůstane funkční, nicméně důrazně před ní varuji. 
-Pokud skutečně chcete svůj Kindle aktualizovat, odinstalujte nejprve slovenštinu s použitím
-odinstalačního balíčku (končícího na _uninstall.bin) a aktualizujte firmware.
-Jailbreak odinstalovávat nemusíte, naopak doporučuji ho před aktualizací firmwaru zachovat,
-protože nikdy nevíte, zda půjde na nový firmware opět nainstalovat.
+Pokiaľ chcete nainštalovať novú verziu slovenčiny a v čítačke as už nachádza jej staršia verzia,
+nie je potrebné túto staršiu verziu odinštalovávať, stačí iba nainštalovať novú.
 
-Pokud chcete nainstalovat novou verzi slovenštiny a ve čtečce již máte starší verzi, není
-třeba tuto starší verzi odinstalovávat, stačí prostě jen instalovat tu novou.
+Slovenčina sa nainštaluje len ako ďalší jazyk k tým, ktoré už sú v čítačke od výrobcu
+a nebude tak problém prepnúť späť na angličtinu alebo iný jazyk bez toho, aby bolo
+nutné čokoľvek iné odinštalovávať.
 
-Slovenština se nainstaluje jen jako další jazyk k těm, které už v čtečce jsou od výrobce
-a nebude tak problém přepnout zpátky na angličtinu či jiný jazyk, aniž by bylo nutné
-cokoliv odinstalovávat.
+Súčasťou aktualizácie je i užívateľská príručka v slovenčine aa slovenská klávesnica.
 
-Součástí lokalizace je i uživatelská příručka ve slovenštině a slovenská klávesnice.
-
-Dalším vylepšením, které lokalizace přináší, je zmenšení nesmyslně širokých okrajů.
-Pokud by vám přesto vyhovovaly ty původní, nakopírujte soubor original_margins do
-složky localization na Kindlu a pak čtečku restartujte.
-Podobně je upraven i výběr velikostí písma, který obsahuje trochu užitečnější hodnoty.
-Tato úprava přináší i možnost zalomení PDF pomocí volby menu "Pouze textové zobrazení".
+Ďalším vylepšením, ktoré lokalizácia prináša, je zmenšenie nezmyselne širokých okrajov.
+Pokiaľ by vám i napriek tomu vyhovovali tie pôvodné, nakopírujte súbor original_margins
+do zložky localization na Kindly a potom čítačku reštartujte.
+Podobne je upravený i výber veľkostí písma, ktorý obsahuje trochu užitočnejšie hodnoty.
+Táto úprava prináša i možnosť zalomenia PDF pomocou voľby v menu "Textové zobrazenie".
 Pro navrácení původního výběru nakopírujte do složky localization na Kindlu soubor
 original_fontsizes a čtečku restartujte.
 
