--- a/loc_hack/src/README_5.4.3.1
+++ b/loc_hack/src/README_5.4.3.1
@@ -1,16 +1,16 @@
 Slovenská lokalizácia pre Kindle Paperwhite 2 s firmvérom 5.4.3.1
 =================================================================
 
-Určené pre model značený ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013)
-_Nie je_ určené pre starší model značený ako Paperwhite či Paperwhite (2012)
+Určené pre model označovaný ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013)
+_Nie je_ určené pre starší model označovaný ako Paperwhite či Paperwhite (2012)
 
-Nejnovšiu verziu nájdete vždy na https://github.com/dsmid/kindle-pw2-l10n-cs/releases
+Najnovšiu verziu nájdete vždy na https://github.com/dsmid/kindle-pw2-l10n-cs/releases
 
 Viac viď. tento článok: http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/
 V prípade problémov sa obráťte na autora v diskusii pod článkom:
 http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/#comments
 
-1) Uisite sa, že máte nainštalovaný jailbreak, prípadne ho nainštalujte odtiaľto:
+1) Uistite sa, že máte nainštalovaný jailbreak, prípadne ho nainštalujte odtiaľto:
    https://github.com/dsmid/kindle-pw2-l10n-cs/releases/tag/jailbreak
 
 2) Po rozbalení zip archívu vyberte súbor končiaci na _install.bin.
@@ -18,41 +18,43 @@ http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/#comments
    
 3) Bezpečne odoberte Kindle z počítača ("Bezpečne odobrať" alebo "Vysunúť") a odpojte kábel
 
-4) Nasledne v čítačke zvolte Menu -> Nastavenia, Menu -> Aktualizovať Kindle a počkajte na dokončenie inštalácie.
+4) Následne v čítačke zvolte Menu -> Nastavenia, Menu -> Aktualizovať Kindle a počkajte na dokončenie inštalácie.
 
 5) Pokiaľ je položka menu "Aktualizovať Kindle" šedá, reštartujte Kindle (Menu -> Nastavenia,
    Menu -> Reštart) a skúste znovu bod 4.
 
-Aktualizácia firmvéru na Kindly s nainštalovanou slovenčinou môže mať nepredvídateľné dôsledky,
+Aktualizácia firmvéru na Kindly s nainštalovanou slovenčinou môže mať nepredvídateľné následky,
 preto som do lokalizácie zabudoval poistku, ktorá by mala aktívne brániť vnúteným
 aktualizáciam zo strany Amazonu.
 Ručná aktualizácia zostane funkčná, dôrazne však pred ňou varujem.
 Ak chcete i napriek tomu svoj Kindle aktualizovať, odinštalujte najskôr slovenčinu použitím
 odinštalačného balíku (končiaceho na _uninstall.bin) a následne aktualizujte firmvér.
-Jailbreak odinštalovávať nemusíte, naopak ho doporučujem pred aktualizáciou firmvéru zachovať,
+Jailbreak odinštalovávať nemusíte, naopak ho doporučujem pred aktualizáciou firmvéru ponechať,
 pretože nikdy neviete, či pôjde na nový firmvér opäť nainštalovať.
 
-Pokiaľ chcete nainštalovať novú verziu slovenčiny a v čítačke as už nachádza jej staršia verzia,
+Pokiaľ chcete nainštalovať novú verziu slovenčiny a v čítačke sa už nachádza jej staršia verzia,
 nie je potrebné túto staršiu verziu odinštalovávať, stačí iba nainštalovať novú.
 
 Slovenčina sa nainštaluje len ako ďalší jazyk k tým, ktoré už sú v čítačke od výrobcu
 a nebude tak problém prepnúť späť na angličtinu alebo iný jazyk bez toho, aby bolo
 nutné čokoľvek iné odinštalovávať.
 
-Súčasťou aktualizácie je i užívateľská príručka v slovenčine aa slovenská klávesnica.
+Súčasťou aktualizácie je i užívateľská príručka v slovenčine a slovenská klávesnica.
 
 Ďalším vylepšením, ktoré lokalizácia prináša, je zmenšenie nezmyselne širokých okrajov.
 Pokiaľ by vám i napriek tomu vyhovovali tie pôvodné, nakopírujte súbor original_margins
-do zložky localization na Kindly a potom čítačku reštartujte.
+do zložky localization a potom čítačku reštartujte.
 Podobne je upravený i výber veľkostí písma, ktorý obsahuje trochu užitočnejšie hodnoty.
 Táto úprava prináša i možnosť zalomenia PDF pomocou voľby v menu "Textové zobrazenie".
-Pro navrácení původního výběru nakopírujte do složky localization na Kindlu soubor
-original_fontsizes a čtečku restartujte.
+Pre navrátenie do pôvodného výberu nakopírujte do zložky localization súbor
+original_fontsizes a čítačku reštartujte.
 
-Pokud budete čtečku s nainstalovanou lokalizací restartovat s připojeným USB kabelem,
-lokalizace se jednorázově deaktivuje. To je záměrná bezpečnostní pojistka, nejedná se
-o chybu. Po odpojení kabelu a dalším restartu bude Kindle opět v češtině.
-
+Pokiaľ budete čítačku s nainštalovanou lokalizáciou reštartovať s pripojeným USB káblom,
+lokalizácia sa jednorázovo deaktivuje. Je to zámerná bezpečnostná poistka, nejedná sa
+o chybu. Po odpojení káblu a ďalším reštartom bude Kindle opäť v slovenčine.
 
 David Šmíd
 david@smidovi.eu
+
+Andrej Tobola
+andrej.tobola@gmail.com
