Fixed few translation issues

--- a/translation_5.4.3.1/po/blanket.po
+++ b/translation_5.4.3.1/po/blanket.po
@@ -104,7 +104,7 @@ msgid "ota.update.failed"
 msgstr ""
 "Aktualizáciu sa nepodarilo nainštalovať.\n"
 "\n"
-"AK potrebujete pomoc navštívte www.kindle.com/support.\n"
+"Ak potrebujete pomoc navštívte www.kindle.com/support.\n"
 "\n"
 "Pre pokračovanie práce s Kindlom stlačte vypínacie tlačidlo."
 
@@ -277,7 +277,7 @@ msgstr "0,14.65,258.68,12.07"
 msgid "usb.screen.message"
 msgstr ""
 "Pokiaľ chcete čítať alebo nakupovať počas nabíjania cez USB, ponechajte prosím"
-"USB kábel pripojený a bezpečne odstráňte Kindle z vášho počítača."
+" USB kábel pripojený a bezpečne odstráňte Kindle z vášho počítača."
 
 msgid "usb.screen.message.fontsize"
 msgstr "12"
