--- a/loc_hack/src/README_5.4.3.1
+++ b/loc_hack/src/README_5.4.3.1
@@ -1,5 +1,5 @@
-Slovenská lokalizácia pre Kindle Paperwhite 2 s firmvérom 5.4.3.1
-=================================================================
+Slovenská lokalizácia pre Kindle Paperwhite 2 s firmvérom 5.4.3.1 a 5.4.3.2
+===========================================================================
 
 Určené pre model označovaný ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013)
 _Nie je_ určené pre starší model označovaný ako Paperwhite či Paperwhite (2012)
