--- a/loc_hack/src/README_5.4.3.1
+++ b/loc_hack/src/README_5.4.3.1
@@ -16,7 +16,7 @@ http://www.eboocek.cz/2014/02/cestina-pro-kindle-paperwhite-2/#comments
 2) Po rozbalení zip archívu vyberte súbor končiaci na _install.bin.
    Ten nakopírujte cez USB do koreňového adresára Kindlu (t.j. tam, kde sa nachádza i zložka documents).
    
-3) Bezpečne odoberte Kindle z počítača ("Bezpečne odobrať" alebo "Vysunúť") a odpojte kábel
+3) Bezpečne odoberte Kindle z počítača ("Bezpečne odobrať" alebo "Vysunúť") a odpojte kábel.
 
 4) Následne v čítačke zvolte Menu -> Nastavenia, Menu -> Aktualizovať Kindle a počkajte na dokončenie inštalácie.
 
