--- a/loc_hack/src/README_5.4.3.1
+++ b/loc_hack/src/README_5.4.3.1
@@ -1,8 +1,10 @@
 Slovenská lokalizácia pre Kindle Paperwhite 2 s firmvérom 5.4.3.1 a 5.4.3.2
 ===========================================================================
 
-Určené pre model označovaný ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013)
-_Nie je_ určené pre starší model označovaný ako Paperwhite či Paperwhite (2012)
+Určené pre model označovaný ako Paperwhite 2, All-New Paperwhite alebo Paperwhite (2013) - na zadnej
+strane má uvedený nápis "Amazon".
+_Nie je_ určené pre starší model označovaný ako Paperwhite či Paperwhite (2012), ktorý má na zadnej strane 
+nápis "Kindle" - do tohto modelu neinštalovať!
 
 Najnovšiu verziu nájdete vždy na https://github.com/dsmid/kindle-pw2-l10n-sk/releases
 
